--- a/finalstyle.css
+++ b/finalstyle.css
@@ -115,7 +115,7 @@ a{
 	margin:0;
 	padding:0;
 	font-family: lato;
-	background-image: linear-gradient(125deg, #EE7552, #E73C7E, #23A6D5, #23D5AB);
+	background-image: linear-gradient(to right, #55CAF4, #0F9BCD);
 	background-size: 1000% 1000%;
 	background-repeat: no-repeat;
 	animation: contact 5s infinite
